[package]
name = "app-center"
version = "0.1.0"
description = "Automatically upload panic traces to [Microsoft AppCenter](https://docs.microsoft.com/en-us/appcenter/diagnostics/upload-crashes)"
authors = ["Vlad Krasnov <vlad@cloudflare.com>"]
edition = "2018"
license = "BSD-3-Clause"
repository = "https://github.com/vkrasnov/appcenter-rs"
keywords = ["macos", "windows", "linux", "panic", "appcenter"]

[dependencies]
log = "0.4"
backtrace = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.10", default-features = false, features = ["blocking", "rustls-tls"] }
base64 = "0.12"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnls"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.2"